@@ -4,6 +4,8 @@ AbortDoc@4
 AbortPath@4
 AddFontResourceA@4
 AddFontResourceW@4
+AddFontResourceExA@12
+AddFontResourceExW@12
 AngleArc@24
 AnimatePalette@16
 Arc@36
@@ -256,6 +258,8 @@ RectVisible@8
 Rectangle@20
 RemoveFontResourceA@4
 RemoveFontResourceW@4
+RemoveFontResourceExA@12
+RemoveFontResourceExW@12
 ResetDCA@8
 ResetDCW@8
 ResizePalette@8
