@@ -1,3 +1,12 @@
+2003-02-12  Roland Schwingel  <roland.schwingel@onevision.de>
+
+	* include/wingdi.h (AddFontResourceEx[AW]): Add.
+	(RemoveFontResourceEx[AW]): Ditto
+	(FR_PRIVATE): Define.
+	(FR_NOT_ENUM): Define.
+	* lib/gdi32.def (AddFontResourceEx[AW]): Add.
+	(RemoveFontResourceEx[AW]): Ditto.
+
 2003-02-10  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/w32api.h: Increment version to 2.3.
